--- a/src/app/view1/view1.component.html
+++ b/src/app/view1/view1.component.html
@@ -6,4 +6,35 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
   <igx-calendar [hasHeader]="true" [vertical]="false" class="calendar"></igx-calendar>
+  <igx-card type="outlined" class="card">
+    <igx-card-header>
+      <h3 igxCardHeaderTitle>
+        Title goes here...
+      </h3>
+      <h5 igxCardHeaderSubtitle>
+        Subtitle goes here...
+      </h5>
+    </igx-card-header>
+    <igx-card-content class="body-content"></igx-card-content>
+    <igx-card-actions class="actions-content">
+      <button igxButton="flat" igxRipple class="button">
+        Button
+      </button>
+      <button igxButton="icon" igxRipple>
+        <igx-icon>
+          favorite
+        </igx-icon>
+      </button>
+      <button igxButton="icon" igxRipple>
+        <igx-icon>
+          bookmark
+        </igx-icon>
+      </button>
+      <button igxButton="icon" igxRipple>
+        <igx-icon>
+          share
+        </igx-icon>
+      </button>
+    </igx-card-actions>
+  </igx-card>
 </div>
