--- a/src/app/view1/view1.component.scss
+++ b/src/app/view1/view1.component.scss
@@ -20,6 +20,11 @@
   flex-grow: 1;
   flex-basis: 0;
 }
+.card {
+  width: 320px;
+  height: max-content;
+  min-width: 320px;
+}
 .h5 {
   margin: 0 0 16px;
   height: max-content;
@@ -32,4 +37,16 @@
 .calendar {
   width: max-content;
   height: max-content;
+}
+.body-content {
+  min-width: 50px;
+  min-height: 50px;
+}
+.actions-content {
+  min-width: 50px;
+  min-height: 40px;
+}
+.button {
+  height: max-content;
+  min-width: min-content;
 }
