--- a/src/app/view1/view1.component.html
+++ b/src/app/view1/view1.component.html
@@ -40,4 +40,7 @@
   <a target="_blank" class="ig-typography__body-1 content">
     This is a link
   </a>
+  <a target="_blank" class="ig-typography__body-1 content">
+    This is a link
+  </a>
 </div>
