--- a/src/app/view1/view1.component.html
+++ b/src/app/view1/view1.component.html
@@ -43,4 +43,7 @@
   <a target="_blank" class="ig-typography__body-1 content">
     This is a link
   </a>
+  <p class="content">
+    Body 1
+  </p>
 </div>
