--- a/src/app/view1/view1.component.html
+++ b/src/app/view1/view1.component.html
@@ -1,4 +1,5 @@
 <div class="column-layout group">
+  
   <h5 class="h5">
     View 1
   </h5>
@@ -41,7 +42,7 @@
     This is a link
   </a>
   <a target="_blank" class="ig-typography__body-1 content">
-    This is a link
+    This
   </a>
   <p class="content">
     Body 1
